# icon-resize

./: .gitignore  CHANGELOG.md  README.md  icon-resize.py  pump.py  pyproject.toml
.github/workflows/: check_version.py  ci.yml
docs/assets/: coverage-report.xml
docs/assets/coverage/: d_a44f0ac069e85531___init___py.html  d_a44f0ac069e85531_test_cli_py.html  index.html  status.json
icon_resize/: __init__.py
src/icon_resize/: __init__.py
tests/: test_cli.py
