[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "icon-resize"
version = "0.2.3"
description = "CLI to create lossless icons in multiple sizes"
authors = ["Kelvin Ng <hoishing@gmail.com>"]
readme = "README.md"
repository = "https://github.com/hoishing/icon-resize"
keywords = ["png", "cli", "resize"]
[[tool.poetry.packages]]
include = "icon_resize"

[tool.poetry.dependencies]
python = "^3.12"
typer = { extras = ["all"], version = "^0.12.3" }

[tool.poetry.scripts]
icon-resize = "icon_resize:entry"

[tool.poetry.group.dev.dependencies]
toml = "^0.10.2"
pytest = "^8.3.2"
packaging = "^24.1"
requests = "^2.32.3"
