[project]
name = "icon-resize"
version = "0.2.4"
requires-python = ">=3.12"
description = "CLI to create lossless icons in multiple sizes"
authors = [{ name = "Kelvin Ng", email = "hoishing@gmail.com" }]
readme = "README.md"
keywords = ["png", "cli", "resize"]
dependencies = ["typer>=0.15.2"]


[project.scripts]
icon_resize = "icon_resize:entry"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/icon_resize"]

[tool.ruff]
isort.no-sections = true
extend-ignore = ["E203", "E402", "E501", "F401", "F811"]

[dependency-groups]
dev = ["pytest>=8.3.5"]

[project.license]
text = "MIT"

[project.urls]
"License" = "https://opensource.org/licenses/MIT"
repository = "https://github.com/hoishing/icon-resize"
